# healthHack

./: .gitignore  Dockerfile.backend  Dockerfile.front  README.md  docker-compose.yml  package-lock.json  package.json
app/: root.tsx
app/routes/: doctor.tsx  index.tsx  login.tsx
app/routes/doctor/: me.tsx
backend/: Analize.py  ECG.py  Symptom-severity.csv  analize.ipynb  app.py  dataset.csv  pyproject.toml
backend/ml/: findSHD.py
frontend/: package-lock.json  package.json
frontend/app/: fhir.ts  local.ts  pocketbase.ts  root.tsx  symptomMap.ts  utils.ts
frontend/app/Condition/: ConditionClient.ts  index.ts
frontend/app/Condition/core/: OpenAPI.ts
frontend/app/Condition/models/: Age.ts  Annotation.ts  Attachment.ts  CodeableConcept.ts  Coding.ts  Condition.ts  Condition_evidence.ts  Condition_stage.ts  ContactPoint.ts  DataRequirement_dateFilter.ts  DataRequirement_sort.ts  Distance.ts  Dosage.ts  HumanName.ts  Identifier.ts  Meta.ts  Money.ts  Period.ts  Ratio.ts  Reference.ts  RelatedArtifact.ts  SampledData.ts  Timing.ts  TriggerDefinition.ts  UsageContext.ts
frontend/app/Condition/services/: ConditionService.ts
frontend/app/Observation/: ObservationClient.ts  index.ts
frontend/app/Observation/models/: Address.ts  Age.ts  Annotation.ts  Attachment.ts  ContactPoint.ts  Contributor.ts  Count.ts  Expression.ts  (+20 more)
frontend/app/Patient/: PatientClient.ts  index.ts
frontend/app/SymptomAI/: SymptomClient.ts  index.ts
frontend/app/components/: ConditionCard.tsx  EcgIcon.tsx
frontend/app/routes/: doctor.tsx  login.tsx
frontend/public/: logo.png~
(+44 files in other folders)
